webroot/css/style.css
/* ... */
.lesser-subtext {
    font-size: 15px;
    word-wrap: normal;
    color: white;
    text-align: center;
}

.lesser-image-header {
    font-size: 25px;
    word-wrap: normal;
    text-align: center;
    color: white;
}

.article-header {
    font-size: 35px;
    text-align: justify;
    font-weight: bold;
    color: black;
}

.article-body {
    font-size: 14px;
    text-align: justify;
    color: black;
}

.text-centered {
    text-align: center;
}

.bump-down {
    margin-top: 10%;
}

.pre-roll-type {
    min-width: 100%;
    max-width: 100vw;
    max-height: 100vh;
}

.emphasis {
    font-weight: bolder;
}

.z-index-1 {
    z-index: 1;
}

.appear-after-click {
    display: none;
}

.font-20px {
    font-size: 20px;
}

.font-18px {
    font-size: 18px;
}

.font-18px {
    font-size: 18px;
}

.inline-flex {
    display: inline-flex !important;
}

.constrained-width-button {
    width: 11rem;
}

.transparent-bg {
    background-color: none;
}

.light-gray-bg {
    background: #FBFAFA;
}

.mobilehomebutton, .mobilehomebutton:visited {
    border-radius: 0px;
    border: 1px solid black;
    color: black;
    margin: 2px 2px 2px 2px;
    padding: 3px 3px 3px 3px;
    text-decoration: none;
    position: absolute;
}

.gl-input-field, .gl-input-field-mobile {
    border-radius: 2px;
    font-family: "open sans", helvetica, sans-serif;
    border: 1px solid #ababab;
}

.gl-input-field {
    width: 32%;
    max-width: 200px;
    padding-top: 0.5rem;
    padding-left: 0px;
    padding-bottom: 0.5rem;
    padding-right: 0px;
    font-size: 0.75rem;
    margin-bottom: 3.5rem;
}

.gl-input-field-mobile {
    width: 100%;
    padding-top: 7px;
    padding-bottom: 7px;
    margin-top: 5px;
    margin-bottom: 5px;
}


#demo-wrapper{
    margin: 0 auto;
    width: 100vw;
  }
  
  #outer {
    background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 362px 766px;
  }
  
  #demo-details {
    margin: 10vmin 4vmin;
  }
  
  #demo-text {
    font-family: "Monstserrat Regular", helvetica, sans-serif !important;
    margin: 6vmin 0;
    font-weight: bold;
    font-size: 2.1vmin;
    text-align: center;
  }
  
  #demo-adtype {
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
    font-size: 37px;
    margin: 13px 0;
  }
  
  #dropdown-menu-button {
    background-color: transparent;
    color: black;
    border-radius: 0;
    border-color: #c5c5c5;
    border-width: 2px;
    line-height: 31px;
    text-align: left;
    padding: 7px;
    letter-spacing: 1px;
    width: 122px;
    font-size: 22px;
  }
  
  .dropdown-item {
    cursor: pointer;
  }
  
  .dropdown-item.active, .dropdown-item:active {
    color: white;
    background-color: #a5252d;
  }
  
  .demo-description {
    float: inline-start;
    text-align: justify;
  }
  
  #demo-iframe #outer {
    height: 780px;
    text-align: center;
    margin: 1vmin 0 0 3vmin;
  }
  
  #demo-iframe #outer .image {
    position: relative;
    width: 320px;
    height: 604px;
    top: 76px;
  }
  
  
  
  
  #demo-mobile-wrapper{
    min-height: 214vmin;
    width: 100vw;
  }
  
  #demo-mobile-details {
    margin: 8px auto;
    display: block;
    width: 67vw;
  }
  
  #mobile-outer {
    background-image: url("https://image.ibb.co/bucnbL/black-iphone.png");
    background-position: center;
    background-repeat: no-repeat;
    background-size: 346px 189vmin;
  }
  
  #demo-mobile-wrapper #demo-text {
    font-size: 5.5vmin;
    margin: 11vmin 0;
  }
  
  #demo-mobile-adtype {
    font-family: "Bebas Neue", bebas, helvetica, sans-serif !important;
    font-size: 26px;
  }
  
  #demo-mobile-wrapper #demo-details {
    margin: 0 4vmin;
  }
  
  .demo-mobile-description {
    float: inline-start;
    text-align: justify;
    margin: 2vmin 0;
  }
  
  #demo-iframe #mobile-outer {
    min-height: 189vmin;
    margin: 2vmin 0;
    position: absolute;
  }
  
  #wrapper-iframe {
    position: relative;
    width: 96vmin;
    min-width: 302px;
    top: 21vmin;
    text-align: center;
  }
  
  #demo-iframe #mobile-outer .image {
    height: 144vmin;
    min-width: 318px;
  }
  
  .dropdown-mobile {
    float: left;
  }
  
  #dropdown-mobile-menu-button {
    background-color: transparent;
    color: black;
    border-radius: 0;
    border-color: #c5c5c5;
    border-width: 2px;
    font-size: 18px;
    line-height: 26px;
    width: 101px;
    text-align: left;
    padding: 6px;
    margin-right: 4vw;
    letter-spacing: 1px;
  }
  
  
  
  
  
  .gl-input-field {
    margin-bottom: 0.5rem;
    width: 85%;
    max-width: 100%;
    padding-left: 6px;
    font-size: 1rem;
  }
  
  #send-message {
    padding: 0.9em 0;
    width: 20%;
  }
  
  #send-message-mobile, #send-message {
    cursor: pointer;
  }
  
  .form-intro {
    font-family: "open sans", helvetica, sans-serif;
    font-size: 22px;
    margin-bottom: 34px;
    width: 85%;
  }
  
  .gl-button-link-black{
    line-height: 17px;
    padding: 1rem !important;
    font-size: 2.5vmin;
    right: 0px;
  }
  
  .container-fluid, .col-md-12 {
    padding: 0;
  }
  
  

